--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,12 @@ android {
 }
 
 dependencies {
+    // design and support libraries
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$supportLibVersion"
+    implementation "com.android.support:design:$supportLibVersion"
+    implementation "com.android.support:recyclerview-v7:$supportLibVersion"
+    implementation "com.android.support:cardview-v7:$supportLibVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
     // retrofit dependencies
