--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         debug {
@@ -30,6 +31,8 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:$supportLibVersion"
     implementation "com.android.support:cardview-v7:$supportLibVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+
+    implementation 'com.github.paolorotolo:expandableheightlistview:1.0.0'
 
     // retrofit dependencies
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
