--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation "com.android.support:design:$supportLibVersion"
     implementation "com.android.support:recyclerview-v7:$supportLibVersion"
     implementation "com.android.support:cardview-v7:$supportLibVersion"
+    implementation "com.android.support:customtabs:$supportLibVersion" // to fix conflict with AdMob
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
     implementation 'com.github.paolorotolo:expandableheightlistview:1.0.0'
@@ -52,6 +53,9 @@ dependencies {
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     annotationProcessor "android.arch.lifecycle:compiler:$lifecycle_version"
+
+    // Google Play AdMob
+    implementation 'com.google.android.gms:play-services-ads:15.0.1'
 
     // test dependcies
     testImplementation 'junit:junit:4.12'
