--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,8 +57,13 @@ dependencies {
     // Google Play AdMob
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
 
+    // Firebase Analytics
+    implementation 'com.google.firebase:firebase-core:16.0.1'
+
     // test dependcies
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+
+apply plugin: 'com.google.gms.google-services'
