--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 android {
     signingConfigs {
@@ -68,6 +69,9 @@ dependencies {
 
     // Firebase Analytics
     implementation 'com.google.firebase:firebase-core:16.0.3'
+
+    // Firebase Crashlytics
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
 
     // Timber logging library
     implementation 'com.jakewharton.timber:timber:4.7.1'
